statum-macros/tests/ui/invalid_transition_unknown_secondary_return_state.stderr
error: Error: transition method `to_b_or_ghost` returns state `Ghost`, but `Ghost` is not a variant of `#[state]` enum `State`.
       Valid next states for `Machine` are: A, B.
       Help: return `Machine<ValidState>` using one of those variants, or call `self.transition()` / `self.transition_with(...)`.
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:22:31
   |
22 |     fn to_b_or_ghost(self) -> Result<Machine<B>, Machine<Ghost>> {
   |                               ^^^^^^
